<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="10px"
    tools:context="com.example.igorl.minhasreceitaspontocom.Views.Receita" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp" >

        <Button
            android:id="@+id/btnSalvar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/salvar"
            android:textStyle="bold"
            android:background="#7EC6D9"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btnEditar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/editar"
            android:textStyle="bold"
            android:background="#7EC6D9"
            android:textColor="@android:color/white" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="10px" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/imgViewFoto"
                    android:layout_width="match_parent"
                    android:layout_height="400px"
                    android:layout_gravity="center"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <Button
                        android:id="@+id/botaoAdicionarFotoCamera"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/foto1"
                        android:background="@android:color/transparent"
                        android:textColor="@android:color/holo_red_dark"
                        android:layout_margin="20px" />

                    <Button
                        android:id="@+id/botaoAdicionarFotoGaleria"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/foto2"
                        android:background="@android:color/transparent"
                        android:textColor="@android:color/holo_red_dark"
                        android:layout_margin="20px" />

                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/textNomeReceita"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:text="@string/nomeReceita"
                android:layout_gravity="center" />

            <EditText
                android:id="@+id/eTextNomeReceita"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="#000"/>

            <TextView
                android:id="@+id/textIngredientes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ingredientesReceita"
                android:textColor="#000"
                android:layout_gravity="center" />

            <EditText
                android:id="@+id/eTextIngredientes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="#000"/>

            <TextView
                android:id="@+id/textModoPreparo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/modoPreparoReceita"
                android:textColor="#000"
                android:layout_gravity="center" />

            <EditText
                android:id="@+id/eTextModoPreparo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="#000"/>

            <TextView
                android:id="@+id/textTempoPreparo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/modoPreparoReceita"
                android:textColor="#000"
                android:layout_gravity="center"/>

            <EditText
                android:id="@+id/eTextTempoPreparo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="#000"/>

            <TextView
                android:id="@+id/textRendimento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rendimento"
                android:textColor="#000"
                android:layout_gravity="center" />

            <EditText
                android:id="@+id/eTextRendimento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:textColor="#000" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
